GNOME Bugzilla – Bug 680653
"gnome-keyring import" should initialize pkcs11
Last modified: 2021-06-18 10:41:06 UTC
The "gnome-keyring import" command should initialize pkcs11. Currently the GcrPkcs11Importer fails because this isn't done. Regression.
Created attachment 219694 [details] [review] tool: Initialize pkcs#11 before beginning import
danw@laptop:tool> ./gnome-keyring-3 import ~/.fedora.cert Gnome2 Key Storage: imported private key: unknown identifier: 8562D4DB7F228332626B602D0DCBB413CA642BE4 Gnome2 Key Storage: imported certificate: danw identifier: 8562D4DB7F228332626B602D0DCBB413CA642BE4 gnome-keyring: couldn't import: No user has logged in (gnome-keyring-3:32145): Gck-CRITICAL **: gck_list_unref_free: assertion `G_IS_OBJECT (l->data)' failed danw@laptop:tool> The "couldn't import" seems to be erroneous (unless maybe it's trying to import it into the User Key Storage too?)
I just logged a bug between gnome-keyring and seahorse, it sounds similar: https://bugs.launchpad.net/ubuntu/+source/gnome-keyring/+bug/1254946
GNOME is going to shut down bugzilla.gnome.org in favor of gitlab.gnome.org. As part of that, we are mass-closing older open tickets in bugzilla.gnome.org which have not seen updates for a longer time (resources are unfortunately quite limited so not every ticket can get handled). If you can still reproduce the situation described in this ticket in a recent and supported software version, then please follow https://wiki.gnome.org/GettingInTouch/BugReportingGuidelines and create a new ticket at https://gitlab.gnome.org/GNOME/gnome-keyring/-/issues/ Thank you for your understanding and your help.