tool: Initialize pkcs#11 before beginning import

https://bugzilla.gnome.org/show_bug.cgi?id=680653